# manaos-integrations

./: .bandit  .coveragerc  .dockerignore  .env.example  .env.konoha  .env.template  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  .vscode_settings.json  .yamllint  100%完了チェックリスト.md  ACCESS_BOTH_LOCATIONS.md  ACTION_CHECK_COMPLETE.md  ACTION_CHECK_REPORT.md  ADDITIONAL_OPTIMIZATIONS.md  ALL_COMPLETE_FINAL.md  ALL_ENHANCEMENTS_COMPLETE.md  ALL_ENHANCEMENTS_FINAL_COMPLETE.md  ALL_FIXES_COMPLETE.md  ALL_IMPROVEMENTS_COMPLETE.md  ALL_IMPROVEMENTS_COMPLETE_FINAL.md  ALL_IMPROVEMENTS_FINAL_SUMMARY.md  ALL_INTEGRATIONS_SUMMARY.md  ALL_OPTIMIZATIONS_COMPLETE.md  ALL_OPTIONALS_COMPLETE.md  ALL_OPTIONS_COMPLETE.md  ALL_PHASES_COMPLETE.md  ALWAYS_READY_LLM_README.md  ALWAYS_RUNNING_RECOMMENDATIONS.md  API_SPEC.md  APP_MODE_GUIDE_REMI_PIXEL7.md  ARGOCD_GITOPS_GUIDE.md  AUTOMATED_TRAFFIC_INJECTION.md  AUTOMATIC_RESTART_SETUP.md  (+1826 more)
.continue/: config.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  GITHUB_AUTOMATION.md  PULL_REQUEST_TEMPLATE.md  WORKFLOW_RUNBOOK.md  auto_assign.yml  copilot-instructions.md  labeler.yml  labels.yml  release-drafter.yml  required-status-checks.json
.hf_cache/: model_cache.json
Reports/: CleanupCandidates_DriveTmp_2026-02-20.txt  CleanupCandidates_Logs_2026-02-20.txt  GitChange_Triage_2026-02-20.md  MCP_運用レポート_20260219.md  Maintenance_Inventory_2026-02-20.md  Maintenance_NoDelete_Runbook.md  ManaOS統合テストレポート_20251228_170300.md  ManaOS統合テストレポート_20251228_170403.md  ManaOS統合テストレポート_20251228_170506.md  ManaOS統合テストレポート_20251228_170554.md  ManaOS統合テストレポート_20251228_170640.md  ManaOS統合テストレポート_20251228_170749.md  ManaOS統合テストレポート_20251228_170900.md  ManaOS統合テストレポート_20251228_171015.md  ManaOS統合テストレポート_20251228_171126.md  ManaOS統合テストレポート_20251228_171239.md  ManaOS統合テストレポート_20251228_171415.md  OpenWebUI_Acceptance_Latest_Status.txt  OpenWebUI_Manual_Case_Record_20260218_165826.json  OpenWebUI_Manual_Case_Record_20260218_175609.json  OpenWebUI_Manual_Case_Record_20260218_184239.json  OpenWebUI_Manual_Case_Record_20260218_201932.json  OpenWebUI_Tool_Acceptance_Final_20260218_170127.json  OpenWebUI_Tool_Acceptance_Final_20260218_170127.md  OpenWebUI_Tool_Acceptance_Final_20260218_175609.json  OpenWebUI_Tool_Acceptance_Final_20260218_175609.md  OpenWebUI_Tool_Acceptance_Final_20260218_184240.json  OpenWebUI_Tool_Acceptance_Final_20260218_184240.md  OpenWebUI_Tool_Acceptance_Final_20260218_201932.json  OpenWebUI_Tool_Acceptance_Final_20260218_201932.md  OpenWebUI_Tool_Acceptance_Report_20260218_163458.md  OpenWebUI_Tool_Acceptance_Report_20260218_163530.md  OpenWebUI_Tool_Acceptance_Report_20260218_201926.md  castle_ex_layer2_quick_eval_checkpoint-3500_20260223_065347.json  castle_ex_layer2_quick_eval_checkpoint-4000_20260224_024555.json  castle_ex_layer2_quick_eval_checkpoint-5000_20260304_103555.json  castle_ex_layer2_quick_eval_checkpoint-800_20260304_114503.json  castle_ex_layer2_quick_eval_checkpoint-800_20260304_115452.json  castle_ex_layer2_quick_eval_checkpoint-800_20260304_120111.json  gate_v114_ck4500_20260303_235709.json  (+4 more)
artifacts/: README.md  example_calendar_ops.yaml  example_daily_ops.yaml  example_data_transform.yaml  example_database_ops.yaml  example_db_backup.yaml  example_drive_backup.yaml  example_email_ops.yaml  example_file_organize.yaml  example_git_ops.yaml  example_log_analysis.yaml  example_n8n_workflow.yaml  example_notion_ops.yaml  example_rows_ops.yaml  example_server_monitor.yaml
autonomy_mcp_server/: __init__.py  __main__.py  server.py
castle_ex/: Dockerfile  FIX_PEFT_TRANSFORMERS.md  IMPLEMENTATION_ROADMAP_v1.1_v1.2.md  RECIPE_layer2_stylefix_v1_1_6.md  castle_ex_data_generator.py  castle_ex_data_validator.py  castle_ex_dataset_splitter.py  castle_ex_evaluation_formatter.py  castle_ex_evaluator.py  castle_ex_evaluator_fixed.py  castle_ex_integrated.py  castle_ex_layer2_inference_server.py  castle_ex_layer2_service.py  castle_ex_learning_prep.py  castle_ex_schedule_generator.py  castle_ex_stats_viewer.py  castle_ex_training_config.yaml  castle_ex_training_helper.py  castle_ex_training_pipeline.py  export_layer2_errors.py  generate_layer2_lora_data.py  generate_layer2_lora_data_v1_1_7.py  layer2_error_analysis_v1_1.md  layer2_lora_recipe.md  run_v11_pipeline.py  train_castle_ex_full.py  train_castle_ex_lora.py  train_with_transformers.py  v11_training_diagnosis.md  (+1 more)
helm/: Chart.yaml  (+1 more)
(+3770 files in other folders)
