[project]
name = "manaos-integrations"
version = "2.6.0"
description = "ManaOS統合サービスシステム - メモリベースAIアシスタント"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MRL-mana"},
]
keywords = ["ai", "assistant", "memory", "mcp", "integration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
core = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "waitress>=2.1.2",
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
    "cachetools>=5.3.0",
    "psutil>=5.9.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "schedule>=1.2.0",
    "croniter>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "mcp>=0.9.0",
    "pyserial>=3.5",
    "pynput>=1.7.0",
    "mss>=9.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "types-psutil>=5.9.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["manaos_integrations"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
extend-exclude = '''
/(
  LLaMA-Factory
  |\.venv
  |venv
  |\.pytest_cache
  |node_modules
  |data
  |out
  |outputs
  |snapshots
  |vendor
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::pytest.PytestUnknownMarkWarning",
    "ignore:The NumPy module was reloaded.*:UserWarning:PIL\\._typing",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

