[project]
name = "manaos-integrations"
version = "2.6.0"
description = "ManaOS統合サービスシステム - メモリベースAIアシスタント"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MRL-mana"},
]
keywords = ["ai", "assistant", "memory", "mcp", "integration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
core = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "waitress>=2.1.2",
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
    "cachetools>=5.3.0",
    "psutil>=5.9.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "schedule>=1.2.0",
    "croniter>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "mcp>=0.9.0",
    "Pillow>=10.0.0",
    "pyserial>=3.5",
    "pynput>=1.7.0",
    "mss>=9.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "types-psutil>=5.9.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["manaos_integrations"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
extend-exclude = '''
/(
  LLaMA-Factory
  |\.venv
  |venv
  |\.pytest_cache
  |node_modules
  |data
  |out
  |outputs
  |snapshots
  |vendor
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pycodestyle]
max_line_length = 140

[tool.pylint.MASTER]
ignored-modules = ["fastapi", "pydantic", "starlette", "stripe", "uvicorn"]

[tool.pylint."messages control"]
disable = [
    "C0114",
    "C0115",
    "C0116",
    "W0603",
    "W0613",
    "W0703",
    "W0212",
    "E0401",
    "broad-exception-caught",
    "global-statement",
    "unused-argument",
    "import-error",
    "protected-access",
]
